# aef-multiscales

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/aef_multiscales/: aggregate.py  checkpoint.py  cli.py  metadata.py  naming.py  reader.py  writer.py
tests/: conftest.py  test_aggregate.py  test_demo.py  test_naming.py
