[project]
name = "aef-multiscales"
version = "0.1.0"
description = "Generate multiscale overview layers for the AEF mosaic Zarr store"
requires-python = ">=3.11"
dependencies = [
    "zarr>=3.0",
    "zarrs>=0.2",
    "numpy>=2.0",
    "s3fs",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
aef-multiscales = "aef_multiscales.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aef_multiscales"]

[tool.pytest.ini_options]
pythonpath = ["src"]
